Fixed navigation bug

--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ body {
 
 /* Navigationsleiste unten fixieren */
 #navigation {
-  height: 13vh; /* Mindesthöhe des Footers, die du anpassen kannst */
+  height: 150px; /* Mindesthöhe des Footers, die du anpassen kannst */
   position: fixed; /* Fixiert das Menü am unteren Rand */
   bottom: 0;
   left: 0;
@@ -154,9 +154,8 @@ body {
 
 /*anpassung der icons in der navigationsleiste*/
 #navigation img {
-  margin-bottom: 3vh;
-  width: 15vw; /* Breite der Icons */
-  height: 15vw; /* Höhe der Icons */
+  width: 130px; /* Breite der Icons */
+  height: 130px; /* Höhe der Icons */
   transition: transform 0.2s; /* Sanfte Animation beim Hover */
 }
 
